--- a/site/layouts/shortcodes/sm-4-col-item.html
+++ b/site/layouts/shortcodes/sm-4-col-item.html
@@ -1,5 +1,5 @@
 {{ $header := .Get 0 }} {{ $body := .Get 1 }}
-<div class="col-sm-4 mb-lg-3">
+<div class="col-sm-4">
   <h5 class="add-star-before">{{$header}}</h5>
   <p>{{$body | markdownify}}</p>
 </div>
