fix pricing card button position

--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -47,6 +47,10 @@
     h4 {
       font-weight: 600;
     }
+
+    .btn {
+      margin-top: 0;
+    }
     &--light {
       width: 365px;
       height: 450px;
