homepage mobile design

--- a/site/layouts/partials/api-monitoring-section.html
+++ b/site/layouts/partials/api-monitoring-section.html
@@ -1,7 +1,7 @@
 <section class="api-monitoring-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-sm-5">
+      <div class="col-sm-12 col-md-10 col-lg-5">
         <div class="text-side text-left"><h2 class="section-super-header">api monitoring</h2>
           <h3 class="section-header">No more broken APIs</h3>
           <p class="lead-text">Make sure your API always responds quickly and with the correct payload. Get started
@@ -11,12 +11,17 @@
             your SSL certificate is about to expire.</p><a class="cta-link" href="/product/api-monitoring/">Learn
             more</a></div>
       </div>
-      <div class="col-sm-7">
+      <div class="col-sm-12 col-lg-7">
         <div class="image-side right">
           <picture>
-            <source type="image/webp" srcset="landing/api-results@2x.webp">
-            <source type="image/png" srcset="landing/api-results@2x.png">
-            <img  class="big-landing-image code fade-in lazy hidden-md-down" src="landing/api-results@2x.png" alt="api monitoring"  />
+            <source type="image/webp" srcset="/landing/api-monitoring@2x.webp">
+            <source type="image/png" srcset="/landing/api-monitoring@2x.png">
+            <img  class="big-landing-image big-drop-shadow assertions fade-in lazy" src="/landing/api-monitoring@2x.png" alt="api monitoring" />
+          </picture>
+          <picture>
+            <source type="image/webp" srcset="/landing/api-results@2x.webp">
+            <source type="image/png" srcset="/landing/api-results@2x.png">
+            <img  class="big-landing-image big-drop-shadow results fade-in lazy" src="/landing/api-results@2x.png" alt="api monitoring"  />
           </picture>
         </div>
       </div>
