--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-sm-4">
+      <div class="col-sm-12 col-md-8 col-lg-4 hidden-md-down">
         <ul class="list-group">
           <li class="list-group-item">
             <h5>
@@ -37,11 +37,11 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-8">
+      <div class="col-sm-12 col-lg-8">
         <picture>
           <source type="image/webp" srcset="/landing/github-pr@2x.webp">
           <source type="image/png" srcset="/landing/github-pr@2x.png">
-          <img  alt="github merge pr screen" class="mb-4 pr-image" src="/landing/github-pr@2x.png"/>
+          <img  alt="github merge pr screen" class="pr-image" src="/landing/github-pr@2x.png"/>
         </picture>
       </div>
     </div>
