--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -1,7 +1,7 @@
 <section class="hero-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-sm-12 col-md-8">
+      <div class="col-sm-12 col-md-10 col-lg-8">
         <h1 class="display-3">Delightful Active Monitoring for Developers</h1>
         <p class="lead">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
           and loving JavaScript.</p>
@@ -17,7 +17,7 @@
         <picture>
           <source type="image/webp" srcset="/landing/hero-image@2x.webp">
           <source type="image/png" srcset="/landing/hero-image@2x.png">
-          <img  class="hero-image img-fluid" src="/landing/hero-image@2x.png" alt="checkly monitoring dashboard"  />
+          <img  class="hero-image big-drop-shadow img-fluid" src="/landing/hero-image@2x.png" alt="checkly monitoring dashboard"  />
         </picture>
       </div>
     </div>
