--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -1,7 +1,7 @@
 <section class="site-monitoring-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-sm-5">
+      <div class="col-sm-12 col-md-10 col-lg-5">
         <div class="text-side text-left"><h2 class="section-super-header">synthetic monitoring</h2>
           <h3 class="section-header">No more broken web apps</h3>
           <p class="lead-text">Monitor and validate your most crucial site transactions like logins, shopping carts and
@@ -13,12 +13,17 @@
             flows in a Chrome browser.</p><a class="cta-link" href="/product/synthetic-monitoring/">Learn more</a>
         </div>
       </div>
-      <div class="col-sm-7">
-        <div class="image-side">
+      <div class="col-sm-12 col-lg-7">
+        <div class="image-side right">
           <picture>
-            <source type="image/webp" srcset="/landing/synthetic-monitoring@2x.png">
+            <source type="image/webp" srcset="/landing/synthetic-monitoring@2x.webp">
             <source type="image/png" srcset="/landing/synthetic-monitoring@2x.png">
-            <img  class="big-landing-image code fade-in lazy" src="/landing/synthetic-monitoring@2x.png" alt="synthetic monitoring"  />
+            <img  class="big-landing-image big-drop-shadow code fade-in lazy" src="/landing/synthetic-monitoring@2x.png" alt="synthetic monitoring"  />
+          </picture>
+          <picture>
+            <source type="image/webp" srcset="/landing/synthetic-monitoring-2@2x.webp">
+            <source type="image/png" srcset="/landing/synthetic-monitoring-2@2x.png">
+            <img  class="big-landing-image big-drop-shadow screenshots fade-in lazy" src="/landing/synthetic-monitoring-2@2x.png" alt="synthetic monitoring"  />
           </picture>
         </div>
       </div>
