--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -1,7 +1,7 @@
 <section class="testimonial-section testimonial-1">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-4">
+      <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block first"><a href="https://1password.com" target="_blank"><img class="testimonial-logo"
                                                                                         src="/images/testimonials/1password_logo.png"/></a>
@@ -14,7 +14,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-4">
+      <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block second"><a href="https://supplypike.com" target="_blank"><img class="testimonial-logo"
                                                                                         src="/images/testimonials/supplypike_logo.png"/></a>
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-4">
+      <div class="col-sm-12 col-md-12 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block third"><a href="http://www.dfuse.io/" target="_blank"><img alt="dfuse logo"
                                                                                       class="testimonial-logo"
