--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -1,10 +1,10 @@
 <section class="workflow-section">
   <div class="container">
     <div class="row text-center justify-content-center">
-      <div class="col-sm-12 col-md-8"><h2 class="section-super-header">workflow</h2>
+      <div class="col-md-12 col-lg-8"><h2 class="section-super-header">workflow</h2>
         <h3 class="display-4">Integrates with your workflow</h3>
       </div>
-      <div class="col-sm-12 col-md-8">
+      <div class="col-md-12 col-lg-8">
         <p class="lead">Checkly integrates with the open source & developer tools you use on a daily basis.</p>
       </div>
     </div>
