--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -34,4 +34,18 @@ section {
       font-size: 2rem;
     }
   }
+  @include media-breakpoint-down(xs) {
+    .section-header {
+      font-size: 1.5rem;
+      line-height: 1.6;
+    }
+    .display-4 {
+      font-size: 1.5rem;
+      line-height: 1.6;
+    }
+    .lead {
+      font-size: 14px;
+      line-height: 25.2px;
+    }
+  }
 }
