--- a/src/scss/checkly-webapp-src/style/scss/_mixins.scss
+++ b/src/scss/checkly-webapp-src/style/scss/_mixins.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 4px 8px -2px rgba(9, 30, 66, 0.15), 0 0 1px rgba(9, 30, 66, 0.30);
 }
 @mixin screen-shadow() {
-  box-shadow: 0 18px 18px rgba(0,0,0,.07);
+  box-shadow: 0 0 20px rgba(0,0,0,.15);
 }
 
 @mixin toolbar() {
