--- a/src/scss/sections/_alerting.scss
+++ b/src/scss/sections/_alerting.scss
@@ -32,26 +32,30 @@
   }
 
   .alerting-image {
-    margin-top: 79px;
+    margin-top: 80px;
     border-radius: 5px;
     border: 1px solid $gray-light;
-
-    @include media-breakpoint-up(xs) {
-      width: 360px;
-    }
-
-    @include media-breakpoint-up(sm) {
-      width: 480px;
-    }
-
-    @include media-breakpoint-up(md) {
-      width: 900px;
-    }
   }
 }
-
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(xl) {
   .alerting-section {
-    height: 700px;
+    .alerting-top-image {
+      width: 100%;
+    }
+    .alerting-image {
+      margin-top: 50px;
+    }
   }
 }
+
+@include media-breakpoint-down(md) {
+  .alerting-section {
+    height: auto;
+
+    .alerting-image {
+      margin-top: 40px;
+      margin-bottom: -60px;
+    }
+  }
+}
+
