--- a/src/scss/sections/_all-features.scss
+++ b/src/scss/sections/_all-features.scss
@@ -32,3 +32,37 @@
     margin-left: auto;
   }
 }
+
+@include media-breakpoint-down(md) {
+  .all-features-section {
+    max-width: 700px;
+    width: 100%;
+    margin: auto;
+
+    .second {
+      margin: 0;
+    }
+    .third {
+      margin-left: 0;
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .all-features-section {
+    padding-top: 0;
+    padding-bottom: 0;
+    max-width: 700px;
+    width: 100%;
+    margin: auto;
+
+    .block {
+      max-width: 100%;
+      margin: auto;
+
+      p {
+        max-width: 100%;
+      }
+    }
+  }
+}
