--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -64,11 +64,24 @@
   }
 }
 
+@include media-breakpoint-down(md) {
+  .hero-section {
+    height: auto;
+    
+    .display-3 {
+      font-size: 48px;
+      line-height: 58px;
+      margin-bottom: 10px;
+    }
+  }
+}
+
 @include media-breakpoint-down(sm) {
   .hero-section {
-    margin-bottom: 2rem;
-    height: 700px;
 
+    .lead {
+      margin-bottom: 20px;
+    }
     .hero-text {
       font-size: 2.5rem;
       padding: $spacer 0 0 0;
@@ -76,6 +89,27 @@
 
     .hero-sub {
       font-size: 1.1rem;
+    }
+    .hero-image {
+      width: 100%;
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .hero-section {
+    padding-top: 2rem;
+    .display-3 {
+      font-size: 32px;
+      line-height: 39px;
+    }
+    .lead {
+      font-size: 16px;
+      line-height: 160%;
+      margin-bottom: 10px;
+    }
+    .hero-image {
+      margin-top: 40px;
     }
   }
 }
