--- a/src/scss/sections/_site-monitoring.scss
+++ b/src/scss/sections/_site-monitoring.scss
@@ -5,24 +5,64 @@
   padding-bottom: 2.01 * $section-bottom-padding;
   overflow: hidden;
 
-  .image-side {
-    img {
-      width: 765px;
-    }
-  }
   img.code {
     margin-left: 70px;
+    width: 594px;
   }
 
   img.screenshots {
-    left: 180px;
-    top: 320px;
+    left: 133px;
+    top: 250px;
     z-index: auto;
+    width: 722px;
+  }
+  @media (max-width: 1199px) {
+    img.screenshots {
+      top: 350px;
+    }
+  }
+  @include media-breakpoint-down(md) {
+    padding-top: $section-top-padding;
+    padding-bottom: $section-top-padding;
+
+    .image-side {
+      margin-top: 50px;
+      height: 350px;
+
+      img.code {
+        margin-left: 0;
+        width: 85%;
+        height: auto;
+      }
+      img.screenshots {
+        top: 300px;
+        left: 110px;
+        width: calc(100% - 128px);
+      }
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    .image-side {
+      margin-top: 0px;
+      img.screenshots {
+        top: 250px;
+      }
+      .big-landing-image {
+        position: absolute;
+      }
+    }
+  }
+  @include media-breakpoint-down(xs) {
+    .image-side {
+      height: 200px;
+
+      img.screenshots {
+        top: 170px;
+        left: 50px;
+        width: calc(100% - 68px);
+      }
+    }
   }
 }
 
-@include media-breakpoint-down(sm) {
-  .site-monitoring-section {
-    height: 760px;
-  }
-}
+  
