--- a/src/scss/sections/_trusted-by.scss
+++ b/src/scss/sections/_trusted-by.scss
@@ -13,6 +13,18 @@
     padding: 1rem 0;
   }
 
+  .section-super-header {
+    font-size: 16px;
+    line-height:  20px;
+  }
+
+  @include media-breakpoint-down(md) {
+    .section-super-header {
+      font-size: 14px;
+      line-height: 22.4px;
+    }
+  }
+
   @include media-breakpoint-down(sm) {
     padding-top: $section-top-padding;
     padding-bottom: $section-bottom-padding;
