--- a/src/scss/sections/_workflow.scss
+++ b/src/scss/sections/_workflow.scss
@@ -26,4 +26,45 @@
   		bottom: 0;
   	}
   }
+
 }
+@include media-breakpoint-down(md) {
+  .workflow-section {
+    padding-top: $section-top-padding;
+    padding-bottom: 10px;
+    .lead {
+      margin-bottom: 40px;
+    }
+    .workflow-item {
+      text-align: center;
+
+      .d-flex {
+        width: fit-content;
+        margin: auto;
+      }
+      .cta-link {
+        position: relative;
+      }   
+    }
+  }
+}
+@include media-breakpoint-down(sm) {
+  .workflow-section {
+    padding-top: 0.8 * $section-top-padding;
+    padding-bottom: 0;
+    .workflow-item {
+      text-align: center;
+      max-width: 400px;
+      margin: auto;
+
+      .d-flex {
+        width: fit-content;
+        margin: auto;
+      }
+      .cta-link {
+        position: relative;
+      }   
+    }
+  }
+}
+
