product/api-monitoring mobile design

--- a/src/scss/_free-trial.scss
+++ b/src/scss/_free-trial.scss
@@ -10,4 +10,8 @@
     background-repeat: repeat-x;
     background-size: 100%;
   }
+  @include media-breakpoint-down(sm) {
+    padding-top: $section-top-padding;
+    padding-bottom: $section-bottom-padding;
+  }
 }
