--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -32,7 +32,7 @@
     .hero-image {
       max-width: 905px;
       max-height: 450px;
-      margin-bottom: 0 !important;
+      margin-bottom: -100px;
     }
 
     h2 {
@@ -83,6 +83,7 @@
         max-width: $product-max-width;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 80px;
       }
 
       &.lead-text {
@@ -117,31 +118,27 @@
       z-index: 10;
       background: $ash;
       width: 100vw;
-      margin-left: calc(570px - 16px - 50vw);
+      margin-left: calc(570px - 24px - 50vw);
       padding-top: 2 * $section-top-padding;
       padding-bottom: 15px; 
-      padding-left: calc(50vw + 16px - 570px);
-      padding-right: calc(50vw + 16px - 570px);
+      padding-left: calc(50vw + 24px - 570px);
+      padding-right: calc(50vw + 24px - 570px);
 
       .row {
-        .col-sm-4 {
+        .grid-item {
           margin-bottom: 63px;
-        }
-        .col-sm-4:nth-child(3n + 1) {
           max-width: 330px;
           width: 100%;
+        }
+        .grid-item:nth-child(3n + 1) {
           margin-left: 0;
           margin-right: auto;
         }
-        .col-sm-4:nth-child(3n + 2) {
-          max-width: 330px;
-          width: 100%;
+        .grid-item:nth-child(3n + 2) {
           margin-left: auto;
           margin-right: auto;
         }
-        .col-sm-4:nth-child(3n) {
-          max-width: 330px;
-          width: 100%;
+        .grid-item:nth-child(3n) {
           margin-left: auto;
           margin-right: 0;
         }
@@ -169,6 +166,7 @@
       padding-bottom: 90px;
     }
     .feature {
+      margin-top: 40px;
       margin-bottom: 4.5rem;
     }
     .text-left {
@@ -185,12 +183,17 @@
       position: relative;
       z-index: 10;
       background: $ash;
+      overflow: hidden;
       width: 100vw;
-      margin-left: calc(570px - 16px - 50vw);
+      margin-left: calc(570px - 24px - 50vw);
       margin-top: 8px;
       padding-top: 3 * $spacer;
-      padding-left: calc(50vw + 16px - 570px);
-      padding-right: calc(50vw + 16px - 570px);
+      padding-left: calc(50vw + 24px - 570px);
+      padding-right: calc(50vw + 24px - 570px);
+
+      .row {
+        marign: 0;
+      }
 
       h3 {
         padding-bottom: 0;
@@ -214,6 +217,9 @@
         width: 100%;
         margin-top: 30px;
       }
+      .img-w900 {
+        margin-bottom: -160px;
+      }
     }
     .section-super-header {
       margin-bottom: 5px;
@@ -223,5 +229,140 @@
       text-transform: uppercase;
       border-bottom: 0;
     }
+    @media(max-width: 1199px) {
+      .grid-section {
+        margin-left: calc(480px - 24px - 50vw);
+        padding-left: calc(50vw - 480px + 24px);
+        padding-right: calc(50vw - 480px + 24px);
+      }
+      .gray-section {
+        margin-left: calc(480px - 24px - 50vw);
+        padding-left: calc(50vw - 480px + 24px);
+        padding-right: calc(50vw - 480px + 24px);
+      }
+    }
+    @include media-breakpoint-down(md) {
+      h1 {
+        &.hero-text {
+          margin-bottom: 1.5 * $spacer;
+          font-size: 3rem;
+        }
+      }
+      .hero-image {
+        margin-bottom: -50px;
+      }
+      p {
+        &.hero-sub-center {
+          margin-bottom: 50px;
+        }
+      }
+      .grid-section {
+        margin-left: -24px;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: $section-top-padding;
+        padding-bottom: 0px;
+
+        .row {
+          .grid-item {
+            margin-bottom: 50px;
+
+            h5 {
+              margin-bottom: 12px;
+            }
+          }
+        }
+      }
+      .gray-section {
+        margin-left: -24px;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: $section-top-padding;
+        padding-bottom: 0px;
+      }
+    }
+    @include media-breakpoint-down(sm) {
+      .feature {
+        margin-bottom: 3.75rem;
+      }
+      .text-left {
+        margin-bottom: 20px;
+        p {
+          max-width: 100%;
+        }
+        .cta {
+          margin-top: 20px;
+        }
+      }
+      .grid-section {
+        margin-left: -18px;
+        padding-left: 18px;
+        padding-right: 18px;
+
+        .row {
+          .grid-item:nth-child(2n + 1) {
+            width: 100%;
+            margin-left: 0 !important;
+            margin-right: auto !important;
+          }
+          .grid-item:nth-child(2n) {
+            width: 100%;
+            margin-left: auto !important;
+            margin-right: 0 !important;
+          }
+        }
+      }
+      .gray-section {
+        margin-left: -18px;
+        padding-left: 18px;
+        padding-right: 18px;
+        .section-super-header {
+          margin-top: 1rem !important;
+        }
+        .cta {
+          margin-top: 10px;
+        }
+        .img-w900 {
+          margin-bottom: -100px;
+        }
+      }
+    }
+    @include media-breakpoint-down(xs) {
+      h1 {
+        &.hero-text {
+          margin-bottom: 1.875 * $spacer;
+          font-size: 2rem;
+        }
+      }
+      p {
+        &.hero-sub-center {
+          font-size: 1rem;
+          line-height: 1.6;
+          margin-bottom: 30px;
+        }
+      }
+      .grid-section {
+        .row {
+          .grid-item {
+            max-width: 480px;
+          }
+          .grid-item:nth-child(2n + 1) {
+            margin-left: auto !important;
+            margin-right: auto !important;
+          }
+          .grid-item:nth-child(2n) {
+            margin-left: auto !important;
+            margin-right: auto !important;
+          }
+        }
+      }
+      .gray-section {
+        .img-w900 {
+          margin-bottom: -50px;
+        }
+      }
+    }
   }
 }
+
+
