--- a/site/layouts/shortcodes/feature-row.html
+++ b/site/layouts/shortcodes/feature-row.html
@@ -1,12 +1,12 @@
 {{ $header := .Get "header" }} {{ $image := .Get "img" }}
-<div class="row pt-4 feature">
-  <div class="col-sm-5 text-left d-flex">
+<div class="row feature">
+  <div class="col-sm-12 col-md-5 text-left d-flex">
     <div class="feature-row-item-wrapper my-auto">
       <h3 class="section-header mt-0 pb-0">{{$header}}</h3>
       <p>{{.Inner | markdownify }}</p>
     </div>
   </div>
-  <div class="col-sm-7 text-right">
+  <div class="col-sm-12 col-md-7 text-right">
     <img
       src="{{$image}}"
       alt="{{$header}}"
