--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -410,3 +410,86 @@
     opacity: 1;
   }
 }
+
+@include media-breakpoint-down(md) {
+
+  .pricing__enterprise {
+    .d-flex:nth-child(1) {
+      width: 100%;
+      margin: auto;
+      text-align: center;
+
+      .btn {
+        width: 250px;
+        margin: auto;
+      }
+    }
+    .d-flex:nth-child(2) {
+      margin-left: auto;
+    }
+    .d-flex:nth-child(3) {
+      margin-right: auto;
+    }
+  }
+  
+}
+
+@include media-breakpoint-down(sm) {
+  .pricing {
+    &__hero {
+      padding-top: 3rem;
+      .display-3 {
+        max-width: 500px;
+        width: 100%;
+        font-size: 48px;
+        line-height: 1.2;
+      }
+    }
+
+    .pricing__enterprise {
+      text-align: center;
+
+      .d-flex {
+        margin: auto;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .pricing {
+    &__hero {
+      padding-top: 3rem;
+      .display-3 {
+        font-size: 32px;
+      }
+    }
+    .pricing__card--dark {
+      max-width: 365px;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .pricing__card--light {
+      width: 100%;
+      margin-right: auto;
+    }
+    table.pricing__feature-table {
+      td {
+        font-size: 12px;
+      }
+    }
+    .pricing__enterprise {
+      .d-flex {
+        width: 100% !important;
+        margin: auto;
+      }
+      .d-flex:nth-child(2) {
+        margin-left: 15vw;
+      }
+      .d-flex:nth-child(3) {
+        margin-left: 15vw;
+      }
+    }
+  }
+}
