fix minimal issues

--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -258,6 +258,9 @@
       .img-w768 {
         width: calc(100% - 30px);
       }
+      .img-w900 {
+        width: calc(100% - 30px);
+      }
       .grid-section {
         margin-left: -24px;
         padding-left: 24px;
