--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css" />
 
-  <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" as="font" type="font/ttf" crossorigin/>
-  <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/Inter/Inter.var.woff2" as="font" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin="anonymous" />
+  
+  <link rel="stylesheet" href="/css/style.css" />
 
   <meta property="og:type" content="article" />
   <meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}" />
