added rel in all outgoing link

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -21,12 +21,12 @@
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
             <h2>How we work</h2>
-            <p>We care about delivering an awesome service. We work on Checkly and open source projects like <a href="https://theheadless.dev/?utm_source=checkly-about">theheadless.dev</a> & <a href="/docs/headless-recorder/">Headless Recorder</a>.
+            <p>We care about delivering an awesome service. We work on Checkly and open source projects like <a href="https://theheadless.dev/?utm_source=checkly-about" rel="noopener">theheadless.dev</a> & <a href="/docs/headless-recorder/">Headless Recorder</a>.
               We don't take ourselves too serious; we take our work and our customers very seriously.
             </p>
             <p>
               We ❤️ open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers.
-              See <a href="https://github.com/tnolet?tab=sponsoring">this page</a> for our current sponsorship status.
+              See <a href="https://github.com/tnolet?tab=sponsoring" rel="noopener">this page</a> for our current sponsorship status.
               Also, we support nonprofit organizations by donating a Checkly Developer plan to them.
             </p>
             <p>Interested in joining us? <a href="/jobs">Learn more here</a> 👈</p>
