--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -6,7 +6,7 @@
         <p class="lead">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
           and loving JavaScript.</p>
         <div>
-          <a class="signup-button btn btn-success btn-lg" data-signup="data-signup" href="https://app.checklyhq.com/signup">
+          <a class="signup-button btn btn-success btn-lg" data-signup="data-signup" href="https://app.checklyhq.com/signup" rel="noopener">
             Start for free
           </a>
         </div>
