--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -1,8 +1,8 @@
 <section class="promo-banner headless">
-  <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank">
+  <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank" rel="noopener">
     <span class="text-gray-dark">🖖 Wanna learn about <strong>Puppeteer</strong> and <strong>Playwright?</strong></span>
   </a>
-  <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank">
+  <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank" rel="noopener">
     <span class="ml-1 mr-1">We just launched
       <strong>theheadless.dev</strong> on
       <img class="mr-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt logo">Product Hunt
