--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -4,7 +4,7 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block first">
-            <a href="https://1password.com" target="_blank">
+            <a href="https://1password.com" target="_blank" rel="noopener">
               <picture>
                 <source type="image/webp" srcset="/landing/supplypike_logo@2x.webp">
                 <source type="image/png" srcset="/landing/supplypike_logo@2x.png">
@@ -26,7 +26,7 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block second">
-            <a href="http://www.dfuse.io/" target="_blank">
+            <a href="http://www.dfuse.io/" target="_blank" rel="noopener">
               <picture>
                 <source type="image/webp" srcset="/landing/dfuse_logo@2x.webp">
                 <source type="image/png" srcset="/landing/dfuse_logo@2x.png">
@@ -50,7 +50,7 @@
       <div class="col-sm-12 col-md-12 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block third">
-            <a href="http://www.dfuse.io/" target="_blank">
+            <a href="http://www.dfuse.io/" target="_blank" rel="noopener">
               <picture>
                 <source type="image/webp" srcset="/landing/lyfegen_logo@2x.webp">
                 <source type="image/png" srcset="/landing/lyfegen_logo@2x.png">
