--- a/site/layouts/partials/testimonial-quote-full-width-2.html
+++ b/site/layouts/partials/testimonial-quote-full-width-2.html
@@ -5,7 +5,7 @@
         <div class="text-center mb-5"><p class="testimonial-text">"I switched to Checkly after using Pingdom a long
           time; I like your product a lot better."</p>
           <div class="testimonial-name-badge">
-            <div class="text-muted">Gersham Meharg | CTO<a href="https://www.telemetrytv.com/" target="_blank"><img
+            <div class="text-muted">Gersham Meharg | CTO<a href="https://www.telemetrytv.com/" target="_blank" rel="noopener"><img
                 alt="customer logo" class="testimonial-logo" src="/images/testimonials/telemetrytv_logo.png"/></a></div>
           </div>
         </div>
