--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -43,7 +43,7 @@
               </li>
             </ul>
           </div>
-          <a class="btn btn-success" href="https://app.checklyhq.com/signup">Start for free</a>
+          <a class="btn btn-success" href="https://app.checklyhq.com/signup" rel="noopener">Start for free</a>
         </div>
 
         <!-- PAID CARDS -->
@@ -138,7 +138,7 @@
             </div>
           </div>
 
-          <a class="btn btn-success pricing__card-right__btn" href="https://app.checklyhq.com/signup">Start for free</a>
+          <a class="btn btn-success pricing__card-right__btn" href="https://app.checklyhq.com/signup" rel="noopener">Start for free</a>
 
         </div>
 
