fixed all images alt, width, height properties

--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -14,7 +14,7 @@
             <p class="testimonial-text">"Checkly helps our teams to ship code more confidently and guide data-driven
               decision making.
               Integrations with tools like Prometheus and PagerDuty make the adoption seamless."</p>
-            <div class="testimonial-portrait"><img src="/images/testimonials/supplypike_portrait.png"/></div>
+            <div class="testimonial-portrait"><img src="/images/testimonials/supplypike_portrait.png" alt="Kanat Bekterimov" width="55" height="55" /></div>
             <div class="testimonial-name-badge">
               <div class="text-muted font-weight-bold">Kanat Bekterimov</div>
               <div class="text-muted">Software Engineer Manager</div>
@@ -37,7 +37,7 @@
               API.
               We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"</p>
             <div class="testimonial-portrait">
-              <img alt="customer portrait" src="/images/testimonials/dfuse_portrait.png"/>
+              <img alt="customer portrait" src="/images/testimonials/dfuse_portrait.png" alt="François Proulx" width="55" height="55" />
             </div>
             <div class="testimonial-name-badge">
               <div class="text-muted font-weight-bold">François Proulx</div>
@@ -61,7 +61,7 @@
               API.
               We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"</p>
             <div class="testimonial-portrait">
-              <img alt="customer portrait" src="/images/testimonials/lyfegen_portrait.png"/>
+              <img alt="customer portrait" src="/images/testimonials/lyfegen_portrait.png" alt="James Gannon" width="55" height="55" />
             </div>
             <div class="testimonial-name-badge">
               <div class="text-muted font-weight-bold">James Gannon</div>
