--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
-            <img src="/images/racoon_logo.svg" alt="Checkly racoon logo" class="mb-4" width="50px">
+            <img src="/images/racoon_logo.svg" alt="Checkly racoon logo" class="mb-4" width="50" height="50">
             <h1>About Checkly</h1>
             <p class="lead mb-4"><b>Create the best active monitoring platform for developers</b></p>
             <p class="mb-4">Checkly was founded in Berlin in 2018 to enable developers to monitor their critical APIs and UIs easily.</p>
@@ -42,17 +42,17 @@
             <h2 class="mb-5">Founding team</h2>
             <div class="row">
               <div class="col-md-6 col-lg-4 align-items-center text-center">
-                <img src="/about/images/tnolet.jpg" alt="portrait Tim Nolet" class="avatar mb-3">
+                <img src="/about/images/tnolet.jpg" alt="portrait Tim Nolet" class="avatar mb-3" width="128" height="128">
                 <h6 class="font-weight-bold mb-1">Tim Nolet</h6>
                 <p>Product & Engineering</p>
               </div>
               <div class="col-md-6 col-lg-4 align-items-center text-center">
-                <img src="/about/images/hlenke.jpg" alt="portrait Tim Nolet" class="avatar mb-3">
+                <img src="/about/images/hlenke.jpg" alt="portrait Tim Nolet" class="avatar mb-3" width="128" height="128">
                 <h6 class="font-weight-bold mb-1">Hannes Lenke</h6>
                 <p>General Manager</p>
               </div>
               <div class="col-md-6 col-lg-4 align-items-center text-center">
-                <img src="/about/images/teuteneuer.jpg" alt="portrait Timo Euteneuer" class="avatar mb-3">
+                <img src="/about/images/teuteneuer.jpg" alt="portrait Timo Euteneuer" class="avatar mb-3" width="128" height="128">
                 <h6 class="font-weight-bold mb-1">Timo Euteneuer</h6>
                 <p>Go To Market</p>
               </div>
