--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -47,7 +47,7 @@
     </div>
     <div class="row justify-content-center text-center">
       <div class="col-sm-12">
-        <div class="d-flex flex-row align-items-center justify-content-center pt-4">Works out-of-the-box with <img class="mx-1" src="/landing/vercel-logo.png" alt="Vercel logo" width="20px">Vercel and <img class="mx-1" src="/landing/heroku-logo.png" alt="Heroku logo" width="20px">Heroku</div>
+        <div class="d-flex flex-row align-items-center justify-content-center pt-4">Works out-of-the-box with <img class="mx-1" src="/landing/vercel-logo.png" alt="Vercel logo" width="20" height="20">Vercel and <img class="mx-1" src="/landing/heroku-logo.png" alt="Heroku logo" width="20" height="20">Heroku</div>
       </div>
     </div>
   </div>
