--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="row footer-top">
       <div class="col-sm-2">
         <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" alt="checkly logo"/>
+          <img src="/images/text_racoon_logo.svg" width="100px" height="39" alt="checkly logo"/>
         </div>
       </div>
       <div class="col-sm-3">
@@ -60,7 +60,7 @@
       <div class="col-12">
         <span>©2020 Checkly Inc. All Rights Reserved.</span>
         <div class="float-right"><a href="https://twitter.com/checklyhq" target="_blank" rel="noopener"><img
-            src="/images/twitter.svg" alt="twitter logo"/></a></div>
+            src="/images/twitter.svg" alt="twitter logo" width="26" height="21" /></a></div>
       </div>
     </div>
   </div>
