--- a/site/layouts/partials/results-section.html
+++ b/site/layouts/partials/results-section.html
@@ -16,7 +16,7 @@
         <picture>
           <source type="image/webp" srcset="/landing/check-results@2x.webp">
           <source type="image/png" srcset="/landing/check-results@2x.png">
-          <img class="results-image img-fluid" src="/landing/check-results@2x.png" alt="checkly check results" width="900" />
+          <img class="results-image img-fluid" src="/landing/check-results@2x.png" alt="checkly check results" width="900" height="700" />
         </picture>
       </div>
     </div>
